--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "firebase": "^9.6.10",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-excel-renderer": "^1.1.0",
+    "react-gapi": "^1.0.2",
+    "react-hook-form": "^7.29.0",
+    "react-select": "^5.3.1",
+    "sass": "^1.49.9",
+    "victory": "^36.3.2",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.7/xlsx-0.18.7.tgz"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/xlsx": "0.0.36",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
