--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-excel-renderer": "^1.1.0",
     "react-gapi": "^1.0.2",
     "react-hook-form": "^7.31.3",
